--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</div>
 
 <!-- new game -->	
-	<div id="js-newGameElement" class="container">
+    <div id="js-newGameElement" class="container">
   		<div class="row text-center">
     		<button  id="js-newGameButton" class="btn btn-default">
       			Nowa Gra
@@ -71,7 +71,7 @@
       			</span>
       				Komputer
     			</div>
-  			</div>
+  		</div>
   		<div class="row">
     		<div class="col-xs-5 text-center">
       			<span id="js-playerPick">
@@ -98,7 +98,16 @@
       			</span>
     		</div>
   		</div>
-	</div>
+  </div>
+
+<!-- congrats element -->
+  <div id="js-finalCongratsElement" class="container">
+    <div class="row text-center">
+      <span id="js-finalCongratsText">
+        Tekst
+      </span>
+    </div>
+  </div>
 
 
 <script type="text/javascript" src="js/scripts.js"></script>
